quick hack to prevent keyboard from covering up playalong page

--- a/static/scss/play_along_page.scss
+++ b/static/scss/play_along_page.scss
@@ -10,6 +10,14 @@
         flex-direction: column;
     }
 
+    .keyboard {
+        position: static;
+    }
+
+    .staff_wrapper {
+        margin-bottom: 0;
+    }
+
     .play_along_workspace {
         > h2 {
             font-size: 20px;
